tests/error/type_match/base_case_array_to_slice_const_propagation2.bz
function test()
{
	let i = 0;
	let arr: [1: *int32] = [ &i ];
	let _: [: *const int32] = arr;
}
